# Groovi

./: README.md  copilot-instructions.md
backend/: .gitignore  main.py  pyproject.toml  requirements.txt
backend/config/: schemas.py  settings.py
backend/models/: Hey_Groovi.tflite  Hey_Groovy.onnx  schemas.py
backend/services/: audio_transcriber.py  mcp_client.py  mood_analyzer.py  music_agent.py  spotify_auth.py  vader_fallback.py
backend/tests/: test_wakeword.py
backend/voice_ai/: local_audio_service.py  streaming_STT.py  streaming_TTS.py  vad_service.py  voice_assistant.py
backend_new/: requirements.txt
backend_new/models/: schemas.py
backend_new/services/: local_audio_service.py  mood_analyzer.py
backend_new/tests/: test_local_audio.py  test_spotify.py
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json
frontend/public/: audio-processor.js
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AIOrb.tsx  AgentLoader.tsx  AudioRecorder.tsx  SongList.tsx  SpotifyAuth.tsx  SpotifyEmbed.tsx  SpotifyPlayer.tsx  TTSButton.tsx  ThoughtProcess.tsx
frontend/src/hooks/: useAudioCapture.ts  useScrollPosition.ts  useSmoothScroll.ts  useTheme.ts  useVoiceWebSocket.ts
frontend/src/services/: api.ts
frontend_new/: package-lock.json  package.json
frontend_new/public/: Dancing-Bot.json
frontend_new/src/: App.css  App.tsx
frontend_new/src/components/: DynamicWaves.tsx  GlareHover.tsx  LottieRobot.tsx  ScrollVelocity.tsx  SplashCursor.tsx  TTSPlayer.tsx  TextCursor.tsx  Waves.tsx
frontend_new/src/hooks/: useTheme.ts
spotify_mcp/: .cache  .gitignore  mood_mappings.py  pyproject.toml  server.py  spotify_api.py  spotify_client.py
spotify_mcp/config/: settings.py
