[project]
name = "spotify-mcp"
version = "0.1.0"
description = "Groovi Spotify MCP Server - Pure stdio transport"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.25.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.1",
    "spotipy>=2.25.2",
]

